--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <div class="header__container container">
         <div class="header__body">
           <div class="header__leftside">
-            <a href="#" title="" class="header__logo_light"
+            <a href="./index.html" title="" class="header__logo_light"
               ><img
                 class="light"
                 src="./images/header_logo.png"
                 alt="header logo"
             /></a>
-            <a href="#" title="" class="header__logo_dark"
+            <a href="./index.html" title="" class="header__logo_dark"
               ><img
                 class="dark"
                 src="./images/inverted_header_logo.png"
@@ -33,12 +33,12 @@
             <div class="header__menu header-menu">
               <ul class="header-menu__list">
                 <li class="header-menu__item">
-                  <a href="#" title="" class="header-menu__link current"
+                  <a href="studio.html" title="" class="header-menu__link"
                     >Studio</a
                   >
                 </li>
                 <li class="header-menu__item">
-                  <a href="./about.html" title="" class="header-menu__link"
+                  <a href="./artists.html" title="" class="header-menu__link"
                     >Artists</a
                   >
                 <li class="header-menu__item">
@@ -72,12 +72,8 @@
             <div class="card__content">
               <span class="card__name">Tattoo Studio</span>
               <span class="card__position">Hanover, Germany</span>
-              <div class="card__socials">
-                <a href="#" class="card__social"
-                  ><i class="bx bxl-twitter"></i></a
-                ><a href="#" class="card__social"
-                  ><i class="bx bxl-facebook"></i></a
-                ><a
+              <div class="card__socials main">
+                <a
                   href="https://www.instagram.com/varane.studios/"
                   class="card__social"
                   ><i class="bx bxl-instagram-alt"></i
@@ -92,11 +88,7 @@
           <div class="card__content">
             <span class="card__name">Tattoo Studio</span>
             <span class="card__position">Hanover, Germany</span>
-            <div class="card__socials">
-              <a href="#" class="card__social"><i class="bx bxl-twitter"></i></a
-              ><a href="#" class="card__social"
-                ><i class="bx bxl-facebook"></i></a
-              ><a
+            <div class="card__socials main"><a
                 href="https://www.instagram.com/varane.studios/"
                 class="card__social"
                 ><i class="bx bxl-instagram-alt"></i
@@ -106,129 +98,107 @@
         </div>
       </div>
     </div>
-      <div class="page__intro home">
-        <div class="intro__container container">
-          <div class="intro__body Artists">
-            <div class="artist card">
-              <div class="card__img">
-                <img src="./images/stefan.png" alt="Stefan Leußer" />
-              </div>
-              <div class="card__content">
-                <span class="card__name">Stefan Leußer</span>
-                <span class="tattoostyle card__position">Schwarz Weiß Kontraste</span>
-                <span class="tattoostyle card__position">&</span>
-                <span class="tattoostyle card__position">Abstrakte Elemente</span>
-                <div class="card__socials">
-                  <a href="#" class="card__social"
-                    ><i class="bx bxl-twitter"></i></a
-                  ><a href="#" class="card__social"
-                    ><i class="bx bxl-facebook"></i></a
-                  ><a
-                    href="https://www.instagram.com/varane.studios/"
-                    class="card__social"
-                    ><i class="bx bxl-instagram-alt"></i
-                  ></a>
-                </div>
+    <div class="intro__container container">
+<div class="headline">Artists</div>
+    </div>
+    <div class="page__intro home">
+      <div class="intro__container container">
+        <div class="intro__body Artists">
+          <div class="artist card">
+            <div class="card__img">
+              <img src="./images/stefan.png" alt="Stefan Leußer" />
+            </div>
+            <div class="card__content">
+              <span class="card__name">Stefan Leußer</span>
+              <span class="tattoostyle card__position">Schwarz Weiß Kontraste</span>
+              <span class="tattoostyle card__position">&</span>
+              <span class="tattoostyle card__position">Abstrakte Elemente</span>
+              <div class="card__socials artists"><a
+                  href="https://www.instagram.com/varane.studios/"
+                  class="card__social"
+                  ><i class="bx bxl-instagram-alt"></i
+                ></a>
               </div>
             </div>
-            <div class="artist card">
-              <div class="card__img">
-                <img src="./images/lou.png" alt="Lou" />
-              </div>
-              <div class="card__content">
-                <span class="card__name">Lou Schmou</span>
-                <span class="tattoostyle card__position">Feine Linien</span>
-                <span class="tattoostyle card__position">&</span>
-                <span class="tattoostyle card__position">Sanfte Schatten</span>
-                <div class="card__socials">
-                  <a href="#" class="card__social"
-                    ><i class="bx bxl-twitter"></i></a
-                  ><a href="#" class="card__social"
-                    ><i class="bx bxl-facebook"></i></a
-                  ><a
-                    href="https://www.instagram.com/varane.studios/"
-                    class="card__social"
-                    ><i class="bx bxl-instagram-alt"></i
-                  ></a>
-                </div>
+          </div>
+          <div class="artist card">
+            <div class="card__img">
+              <img src="./images/lou.png" alt="Louisa Wiewel" />
+            </div>
+            <div class="card__content">
+              <span class="card__name">Louisa Wiewel</span>
+              <span class="tattoostyle card__position">Feine Linien</span>
+              <span class="tattoostyle card__position">&</span>
+              <span class="tattoostyle card__position">Sanfte Schatten</span>
+              <div class="card__socials artists"><a
+                  href="https://www.instagram.com/louutattoo/"
+                  class="card__social"
+                  ><i class="bx bxl-instagram-alt"></i
+                ></a>
               </div>
             </div>
-    <div class="artist card">
-      <div class="card__img">
-        <img src="./images/vitalij.png" alt="Vitalij" />
-      </div>
-      <div class="card__content">
-        <span class="card__name">Vitalij Mitalji</span>
-        <span class="tattoostyle card__position">Feine, geometrische Linien</span>
-        <span class="tattoostyle card__position">&</span>
-        <span class="tattoostyle card__position">Realistische Motive</span>
-        <div class="card__socials">
-          <a href="#" class="card__social"
-            ><i class="bx bxl-twitter"></i></a
-          ><a href="#" class="card__social"
-            ><i class="bx bxl-facebook"></i></a
-          ><a
-            href="https://www.instagram.com/varane.studios/"
-            class="card__social"
-            ><i class="bx bxl-instagram-alt"></i
-          ></a>
-        </div>
+          </div>
+  <div class="artist card">
+    <div class="card__img">
+      <img src="./images/vitalij.png" alt="Vitalij Krist" />
+    </div>
+    <div class="card__content">
+      <span class="card__name">Vitalij Krist</span>
+      <span class="tattoostyle card__position">Feine, geometrische Linien</span>
+      <span class="tattoostyle card__position">&</span>
+      <span class="tattoostyle card__position">Realistische Motive</span>
+      <div class="card__socials artists"><a
+          href="https://www.instagram.com/vitalijkrist.ttt/"
+          class="card__social"
+          ><i class="bx bxl-instagram-alt"></i
+        ></a>
       </div>
     </div>
   </div>
-      <footer class="footer">
-        <div class="footer_container">
-          <div class="row">
-            <div class="footer-col">
-              <h4>Kontakt</h4>
-              <ul>
-                <li>Königsworther Straße 22<br>31709 Hannover</li>
-                <li>+49(0)179-4159099</li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Öffnungszeiten</h4>
-              <ul>
-                <li>Montags 8:00-16:00</li>
-                <li>Dienstags 8:00-16:00</li>
-                <li>Mittwochs 8:00-16:00</li>
-                <li>Donnerstag 8:00-16:00</li>
-                <li>Freitag 8:00-16:00</li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Informationen</h4>
-              <ul>
-                <li><a href="#">Impressum</a></li>
-                <li><a href="#">Datenschutz</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">AGB</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Socials</h4>
-              <div class="intro__socials intro-soc">
-                <div class="intro-soc__item">
-                  <a href="#" title="" class="intro-soc__link"
-                    ><i class="bx bxl-twitter"></i
-                  ></a>
-                </div>
-                <div class="intro-soc__item">
-                  <a href="#" title="" class="intro-soc__link"
-                    ><i class="bx bxl-facebook"></i
-                  ></a>
-                </div>
-                <div class="intro-soc__item">
-                  <a href="https://www.instagram.com/varane.studios/" title="" class="intro-soc__link"
-                    ><i class="bx bxl-instagram-alt"></i
-                  ></a>
-                </div>
+</div>
+    <footer class="footer">
+      <div class="footer_container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>Kontakt</h4>
+            <ul>
+              <li>Königsworther Straße 22<br>31709 Hannover</li>
+              <li>+49(0)179-4159099</li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Öffnungszeiten</h4>
+            <ul>
+              <li>Montags 8:00-16:00</li>
+              <li>Dienstags 8:00-16:00</li>
+              <li>Mittwochs 8:00-16:00</li>
+              <li>Donnerstag 8:00-16:00</li>
+              <li>Freitag 8:00-16:00</li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Informationen</h4>
+            <ul>
+              <li><a href="#">Impressum</a></li>
+              <li><a href="#">Datenschutz</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">AGB</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Socials</h4>
+            <div class="intro__socials intro-soc">
+              <div class="intro-soc__item">
+                <a href="https://www.instagram.com/varane.studios/" title="" class="intro-soc__link"
+                  ><i class="bx bxl-instagram-alt"></i
+                ></a>
               </div>
             </div>
-            </div>
+          </div>
           </div>
         </div>
-     </footer>
+      </div>
+   </footer>
     <script src="./index.js"></script>
   </body>
 </html>
