--- a/artists.html
+++ b/artists.html
@@ -67,65 +67,101 @@
         </div>
       </div>
     </header>
-    <div class="page__artists home">
-      <div class="intro__container container">
-        <div class="intro__body Stefan ">
+<!-- Stefan -->
+<div class="page__intro home">
+  <div class="intro__container container">
+    <div class="intro__artists home">
+      <div class="card_artist">
+       <div class="intro__artists Stefan ">
+        <div class="artist card">
+         <div class="card__img_artist"><img src="./images/stefan.png" alt="Stefan Leußer" /></div>
+        </div>
+      <div class="intro__content">
+        <h1 class="intro__title">Stefan Leußer</h1>
+        <hr />
+        <span class="intro__position"
+          >Stefans Stil definiert sich durch  schwarz weiß Kontraste. 
+          Seine Werke kombinieren  Illustrationen mit abstrakten Elementen.
+        </span>
+      </div>
+      </div>
+      <div class="slide hi-slide">
+        <div class="hi-prev"></div>
+        <div class="hi-next"></div>
+        <ul>
+          <li> <a href=""></a><img src="./images/stefan1.png" alt="" /></li>
+          <li><img src="./images/stefan2.png" alt="" /></li>
+          <li><img src="./images/stefan3.png" alt="" /></li>
+          <li><img src="./images/stefan4.png" alt="" /></li>
+          <li><img src="./images/stefan5.png" alt="" /></li>
+          <li><img src="./images/stefan6.png" alt="" /></li>
+          <li><img src="./images/stefan7.png" alt="" /></li>
+        </ul>
+      </div>
+      <!-- Lou -->
+      <div class="intro__artists home">
+        <div class="card_artist">
+         <div class="intro__artists Stefan ">
           <div class="artist card">
-            <div class="card__img">
-              <img src="./images/stefan.png" alt="Stefan Leußer" />
-            </div>
-            <div class="card__content">
-              <span class="card__name">Stefan Leußer</span>
-              <span class="tattoostyle card__position">Schwarz Weiß Kontraste</span>
-              <span class="tattoostyle card__position">&</span>
-              <span class="tattoostyle card__position">Abstrakte Elemente</span>
-              <div class="card__socials"><a
-                  href="https://www.instagram.com/varane.studios/"
-                  class="card__social"
-                  ><i class="bx bxl-instagram-alt"></i
-                ></a>
-              </div>
-            </div>
+           <div class="card__img_artist"><img src="./images/lou.png" alt="Louisa Wiewel" /></div>
           </div>
-        </div> 
-        <div class="intro__body Lou ">
-          <div class="artist card">
-            <div class="card__img">
-              <img src="./images/lou.png" alt="Louisa Wiewel" />
+        <div class="intro__content">
+          <h1 class="intro__title">Louisa Wiewel</h1>
+          <hr />
+          <span class="intro__position"
+            >Louisas Stil zeichnet sich durch feine Linien und sanfte Schatten aus.
+          </span>
+        </div>
+        </div>
+        <div class="slide hi-slide">
+          <div class="hi-prev"></div>
+          <div class="hi-next"></div>
+          <ul>
+            <li> <a href=""></a><img src="./images/lou1.png" alt="" /></li>
+            <li><img src="./images/lou2.png" alt="" /></li>
+            <li><img src="./images/lou3.png" alt="" /></li>
+            <li><img src="./images/lou4.png" alt="" /></li>
+            <li><img src="./images/lou5.png" alt="" /></li>
+            <li><img src="./images/lou6.png" alt="" /></li>
+            <li><img src="./images/lou7.png" alt="" /></li>
+          </ul>
+        </div>
+        <!-- Vitalij -->
+        <div class="intro__artists home">
+          <div class="card_artist">
+           <div class="intro__artists Stefan ">
+            <div class="artist card">
+             <div class="card__img_artist"><img class="vitalij" src="./images/vitalij.png" alt="Vitalij Krist" /></div>
             </div>
-            <div class="card__content">
-              <span class="card__name">Louisa Wiewel</span>
-              <span class="tattoostyle card__position">Feine Linien</span>
-              <span class="tattoostyle card__position">&</span>
-              <span class="tattoostyle card__position">Sanfte Schatten</span>
-              <div class="card__socials"><a
-                  href="https://www.instagram.com/louutattoo/"
-                  class="card__social"
-                  ><i class="bx bxl-instagram-alt"></i
-                ></a>
-              </div>
-            </div>
+          <div class="intro__content">
+            <h1 class="intro__title">Vitalij Krist</h1>
+            <hr />
+            <span class="intro__position"
+              >Vitalijs Stil leitet sich durch feine, geometrische Linien und realistische Motive ab.
+            </span>
           </div>
-        </div> 
-        <div class="intro__body Vitalij ">
-          <div class="artist card">
-            <div class="card__img">
-              <img src="./images/vitalij.png" alt="Vitalij Krist" />
-            </div>
-            <div class="card__content">
-              <span class="card__name">Vitalij Krist</span>
-              <span class="tattoostyle card__position">Feine, geometrische Linien</span>
-              <span class="tattoostyle card__position">&</span>
-              <span class="tattoostyle card__position">Realistische Motive</span>
-              <div class="card__socials"><a
-                  href="https://www.instagram.com/vitalijkrist.ttt/"
-                  class="card__social"
-                  ><i class="bx bxl-instagram-alt"></i
-                ></a>
-              </div>
-            </div>
           </div>
-        </div> 
+          <div class="slide hi-slide">
+            <div class="hi-prev"></div>
+            <div class="hi-next"></div>
+            <ul>
+              <li> <a href=""></a><img src="./images/vit1.png" alt="" /></li>
+              <li><img src="./images/vit2.png" alt="" /></li>
+              <li><img src="./images/vit3.png" alt="" /></li>
+              <li><img src="./images/vit4.png" alt="" /></li>
+              <li><img src="./images/vit5.png" alt="" /></li>
+              <li><img src="./images/vit6.png" alt="" /></li>
+              <li><img src="./images/vit7.png" alt="" /></li>
+            </ul>
+          </div>
+    <!-- Gallery displaying some works -->
+
     <script src="./index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="./hislide/jquery.hislide.js"></script>
+<script>
+      $(".slide").hiSlide();
+</script>
+
   </body>
 </html>
