--- a/studio.html
+++ b/studio.html
@@ -64,6 +64,26 @@
         </div>
       </div>
     </header>
+    <div class="slide hi-slide">
+      <div class="hi-prev"></div>
+      <div class="hi-next"></div>
+      <ul>
+        <li><img src="./images/stefan1.png" alt="" /></li>
+        <li><img src="./images/stefan2.png" alt="" /></li>
+        <li><img src="./images/stefan3.png" alt="" /></li>
+        <li><img src="./images/stefan4.png" alt="" /></li>
+        <li><img src="./images/stefan5.png" alt="" /></li>
+        <li><img src="./images/stefan6.png" alt="" /></li>
+        <li><img src="./images/stefan7.png" alt="" /></li>
+        <li><img src="./images/stefan8.png" alt="" /></li>
+        <li><img src="./images/stefan9.png" alt="" /></li>
+      </ul>
+    </div>
     <script src="./index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="./hislide/jquery.hislide.js"></script>
+    <script>
+      $(".slide").hiSlide();
+    </script>
   </body>
 </html>
